# matematica-professor

./: .gitignore  CMakeLists.txt  README.md  test.py
src/: tarefa_1.c  tarefa_2.c  tarefa_3.c  tarefa_4.c  tarefa_5.c  tarefa_6.c
