cmake_minimum_required(VERSION 3.19)
project(c_exercises_list_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(tarefa_1 src/tarefa_1.c)
add_executable(tarefa_2 src/tarefa_2.c)
add_executable(tarefa_3 src/tarefa_3.c)
add_executable(tarefa_4 src/tarefa_4.c)
add_executable(tarefa_5 src/tarefa_5.c)
add_executable(tarefa_6 src/tarefa_6.c)